<resources>
    <string name="app_name">FootyX</string>
    <string name="title_home">Home</string>
    <string name="title_leagues">Leagues</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_match">Match</string>
    <string name="title_player">Player</string>
    <string name="title_team">Team</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_match_reminders">Match Reminders</string>
    <string name="settings_goals_alerts">Goals Alerts</string>
    <string name="settings_final_score_alerts">Final Score Alerts</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_favorite_team">Favorite Team</string>
    <string name="settings_language">Language</string>
    <string name="settings_english">English</string>
    <string name="settings_afrikaans">Afrikaans</string>
    <string name="settings_security">Security</string>
    <string name="settings_biometric_auth">Biometric Authentication</string>
    <string name="settings_biometric_description">Use fingerprint or face unlock</string>
    <string name="settings_logout">Log Out</string>
    <string name="settings_back">Back</string>
    <string name="settings_push_notifications">Push Notifications</string>
    <string name="default_notification_channel_id">footyx_default_channel</string>
    <string name="notification_channel_match_reminders">Match Reminders</string>
    <string name="notification_channel_goal_alerts">Goal Alerts</string>
    <string name="notification_channel_final_score">Final Score</string>
    <string name="notification_match_reminder_title">Match Starting Soon</string>
    <string name="notification_goal_alert_title">Goal!</string>
    <string name="notification_final_score_title">Match Finished</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="match_statistics_title">Match Statistics</string>
    <string name="stat_shots_on_goal">Shots on Goal</string>
    <string name="stat_shots_off_goal">Shots off Goal</string>
    <string name="stat_total_shots">Total Shots</string>
    <string name="stat_blocked_shots">Blocked Shots</string>
    <string name="stat_shots_insidebox">Shots insidebox</string>
    <string name="stat_shots_outsidebox">Shots outsidebox</string>
    <string name="stat_fouls">Fouls</string>
    <string name="stat_corner_kicks">Corner Kicks</string>
    <string name="stat_offsides">Offsides</string>
    <string name="stat_ball_possession">Ball Possession</string>
    <string name="stat_yellow_cards">Yellow Cards</string>
    <string name="stat_red_cards">Red Cards</string>
    <string name="stat_goalkeeper_saves">Goalkeeper Saves</string>
    <string name="stat_total_passes">Total passes</string>
    <string name="stat_passes_accurate">Passes accurate</string>
    <string name="stat_passes_percentage">Passes %</string>
    <string name="previous_games_title">Previous Games</string>
    <string name="no_previous_games">No previous encounters found.</string>
    <string name="winning_odds_title">Winning Odds</string>
    <string name="odd_win_for_home">Home Win</string>
    <string name="odd_draw">Draw</string>
    <string name="odd_win_for_away">Away Win</string>
    <string name="odds_disclaimer_placeholder">Odds are for informational purposes only. Source: ExampleBookie</string>
    <string name="view_team_title">View Team</string>
    <string name="home_team_logo_desc">Home team logo</string>
    <string name="away_team_logo_desc">Away team logo</string>
    <string name="events_title">Events</string>
    <string name="stadium_name_label">Stadium:</string>
    <string name="referee_label">Referee:</string>
    <string name="event_period_first_half_placeholder">FIRST HALF</string>
    <string name="event_period_second_half_placeholder">SECOND HALF</string>
    <string name="event_period_extra_time_placeholder">EXTRA TIME</string>
    <string name="no_events_placeholder">No match events to display yet.</string>
    <string name="home_upcoming_fixtures_title">Upcoming Fixtures</string>
    <string name="home_no_upcoming_fixtures">No upcoming fixtures to display.</string>
    <string name="home_live_matches_title">Live Matches</string>
    <string name="home_no_live_matches">No matches are currently live.</string>
    <string name="home_new_transfers_title">New Transfers</string>
    <string name="home_no_new_transfers">No recent transfers to display.</string>
    <string name="transfer_from_team_logo_desc">Transfer from team logo</string>
    <string name="transfer_to_team_logo_desc">Transfer to team logo</string>
    <string name="player_photo_desc">Player photo</string>
    <string name="login_welcome">Welcome Back !</string>
    <string name="login_info">Get news and statistics of your favourite teams now</string>
    <string name="login_register_bttn">New User ? Sign Up Here</string>
    <string name="login_sign_in_bttn">Sign In</string>
    <string name="biometric_login_sign_in_bttn">Biometric Login</string>
    <string name="main_search_hint">Search</string>
    <string name="register_welcome">Welcome !</string>
    <string name="register_info">Get news and statistics of your favourite teams now</string>
    <string name="register_sign_up_bttn">Sign Up</string>
    <string name="splash_get_started">Get Started</string>
    <string name="splash_welcome">Welcome to FootyX</string>
    <string name="splash_tagline">Your ultimate football companion</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_teams_section">Favorite Teams</string>
    <string name="favorites_players_section">Favorite Players</string>
    <string name="favorites_add_team">Add Team</string>
    <string name="favorites_add_player">Add Player</string>
    <string name="favorites_no_teams">No favorite teams added yet</string>
    <string name="favorites_no_players">No favorite players added yet</string>
    <string name="favorites_search_hint">Search teams or players...</string>
    <string name="favorites_back">Back</string>
    <string name="background_image_desc">Background image</string>
    <string name="app_logo_desc">Application logo</string>
    <string name="recommend_title_favourite_team">Favourite Team</string>
    <string name="recommend_subtitle_info">Get started by finding and selecting your favourite teams</string>
    <string name="recommend_search_hint">Search for a team</string>
    <string name="recommend_no_teams_found">No teams found. Try a different search.</string>
    <string name="recommend_button_done">Done</string>
    <string name="recommend_button_skip">Skip</string>
    <string name="or_separator">OR</string>
    <string name="team_logo_desc">Team logo</string>
    <string name="edit_welcome">Update User Details</string>
    <string name="edit_info">Get news and statistics of your favourite teams now</string>
    <string name="edit_submit_bttn">Submit</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="leagues_select_season">Select Season</string>
    <string name="leagues_column_team">Team</string>
    <string name="leagues_column_played">P</string>
    <string name="leagues_column_goal_difference">GD</string>
    <string name="leagues_column_points">Pts</string>
    <string name="leagues_no_available_seasons">No available seasons (2021–2023) for this league</string>
    <string name="leagues_seasons_label">Seasons: %1$s</string>
    <string name="player_season_hint">Season (2021-2023)</string>
    <string name="player_select_team_league">Select Team/League:</string>
    <string name="player_attacking_section">Attacking</string>
    <string name="player_defense_discipline_section">Defense &amp; Discipline</string>
    <string name="player_nationality_label">Nationality:</string>
    <string name="player_age_label">Age:</string>
    <string name="player_height_label">Height:</string>
    <string name="player_weight_label">Weight:</string>
    <string name="search_team_title">Search for a Team</string>
    <string name="search_player_title">Search for a Player</string>
    <string name="content_desc_close_dialog">Close dialog</string>
    <string name="season_range_note">(2021-2023 only)</string>
    <string name="select_league_prompt">Select which league to follow:</string>
    <string name="search_player_hint">Search for a player...</string>
    <string name="no_players_found">No players found</string>
    <string name="favorite_team_logo_desc">Favorite Team Logo</string>
    <string name="remove_favorite_team_desc">Remove favorite team</string>
    <string name="player_apps_value">Apps\n%1$d</string>
    <string name="player_goals_value">Goals\n%1$d</string>
    <string name="player_assists_value">Assists\n%1$d</string>
    <string name="player_rating_value">Rating\n%1$s</string>
    <string name="player_shots_total_label">Shots Total:</string>
    <string name="player_shots_on_target_label">Shots on Target:</string>
    <string name="player_dribbles_success_label">Dribbles (Success):</string>
    <string name="player_key_passes_label">Key Passes:</string>
    <string name="player_duels_won_label">Duels Won:</string>
    <string name="player_tackles_label">Tackles:</string>
    <string name="player_fouls_drawn_label">Fouls Drawn:</string>
    <string name="player_yellow_cards_label">Yellow Cards:</string>
    <string name="player_position_unknown">Unknown</string>
    <string name="player_rating_na">N/A</string>
    <string name="player_season_invalid_error">Valid seasons: 2021-2023</string>
    <string name="transfer_type_label">Type: %1$s</string>
    <string name="not_available">N/A</string>
    <string name="select_league_title">Select League</string>
    <string name="label_season">Season:</string>
    <string name="favorites_set_favorite_player">%1$s set as your favorite player!</string>
    <string name="favorites_remove_player_title">Remove Favorite Player</string>
    <string name="favorites_remove_player_confirm">Are you sure you want to remove %1$s?</string>
    <string name="action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>
    <string name="favorites_player_removed">Favorite player removed</string>
    <string name="favorites_set_favorite_team">%1$s set as your favorite team!</string>
    <string name="favorites_remove_team_title">Remove Favorite Team</string>
    <string name="favorites_remove_team_confirm">Are you sure you want to remove %1$s?</string>
    <string name="favorites_team_removed">Favorite team removed</string>
    <string name="settings_choose_favorite">Choose favorite team and player</string>
    <string name="settings_edit_user_details">Edit User Details</string>
    <string name="action_clear">Clear</string>
    <string name="team_season_hint">Enter season (2021-2023)</string>
    <string name="team_recent_form">Recent Form</string>
    <string name="team_season_overview">Season Overview</string>
    <string name="standings_legend_title">Legend</string>
    <string name="standings_cl_label">CL</string>
    <string name="standings_el_label">EL</string>
    <string name="standings_ecl_label">ECL</string>
    <string name="standings_rel_label">REL</string>
</resources>