<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecommendActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/background_image_recommend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_image_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/black_FootyX"
            app:cardCornerRadius="45dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="0dp">

                <ImageView
                    android:id="@+id/recommend_logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/footyx_logo"
                    android:contentDescription="@string/app_logo_desc" />

                <TextView
                    android:id="@+id/recommend_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommend_title_favourite_team"
                    android:textAlignment="center"
                    android:textColor="@color/white_FootyX"
                    android:textSize="28sp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/recommend_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/recommend_subtitle_info"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral70"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view_teams"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/white_background"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@android:color/transparent"
                    app:queryHint="@string/recommend_search_hint" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_teams"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:minHeight="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_selectable_team"
                    tools:itemCount="4" />

                <TextView
                    android:id="@+id/text_no_teams_found"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recommend_no_teams_found"
                    android:textColor="#AFAFAF"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- "Done" Button Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_footyx_background"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_done_recommend"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/recommend_button_done"
                android:textAllCaps="false"
                android:textColor="@color/white_FootyX" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_or_separator_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_separator"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_skip_recommend"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/recommend_button_skip"
            android:textColor="@color/black_FootyX"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
